--- a/home/templates/academy.html
+++ b/home/templates/academy.html
@@ -7,46 +7,42 @@
 <section style="padding: 1vw 5vw;" class="border-b border-orange-500">
 <h3 class="text-2xl font-bold text-white mb-5 text-white">Our Courses</h3>
 <div id="productContainer" class="p-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8" >
-  <div class="bg-white p-4 rounded-lg shadow-md mb-4"><img src="{% static 'img/academey post.jpg'%}" alt="ATH-M20x Professional Headphones" class=" w-full h-32 object-contain mb-4"><h3 class="text-lg text-black font-semibold">Course Title 01</h3><p class="text-gray-600 pb-2"></p><a href="https://wa.me/+94777836315/?text=Hello%2C%20I'm%20interested%20in%20ATH-M20x%20Professional%20Headphones%20.%20Can%20you%20provide%20more%20details%3F" class="bg-orange-500 text-white rounded-full px-4 py-2 mt-4">More Details</a></div>
-  <div class=" bg-gray-200 p-4 rounded-lg shadow-md mb-4"><img src="{% static 'img/academey post.jpg'%}" alt="ATH-M20x Professional Headphones" class="transparent-background w-full h-32 object-contain mb-4"><h3 class="transparent-background text-lg text-gray-500 font-semibold">Course Title 02</h3><p class="transparent-background text-gray-600 pb-2"></p><a href="https://wa.me/+94777836315/?text=Hello%2C%20I'm%20interested%20in%20ATH-M20x%20Professional%20Headphones%20.%20Can%20you%20provide%20more%20details%3F" class="transparent-background bg-orange-500 text-white rounded-full px-4 py-2 mt-4">Coming Soon</a></div>
+  <div class="bg-zinc-950 p-4 rounded-lg shadow-md mb-4"><img src="{% static 'img/academy post.jpg'%}" alt="ATH-M20x Professional Headphones" class=" w-full h-32 object-contain mb-4"><h3 class="text-sm text-gray-200 p-2">Playback Technology with Ableton Live</h3><p class="text-gray-600 pb-2"></p><a href="https://wa.me/+94777836315/?text=Hello%2C%20I'm%20interested%20in%20ATH-M20x%20Professional%20Headphones%20.%20Can%20you%20provide%20more%20details%3F" class="bg-orange-500 text-white rounded-full px-4 py-2 mt-4">More Details</a></div>
+  <div class="bg-zinc-950 p-4 rounded-lg shadow-md mb-4 transparent-background"><img src="{% static 'img/course 2.jpeg'%}" alt="ATH-M20x Professional Headphones" class=" w-full h-32 object-contain mb-4"><h3 class=" transparent-background text-sm text-gray-200 p-2">Playback Technology with Ableton Live</h3><p class="transparent-background text-gray-600 pb-2"></p><a href="https://wa.me/+94777836315/?text=Hello%2C%20I'm%20interested%20in%20ATH-M20x%20Professional%20Headphones%20.%20Can%20you%20provide%20more%20details%3F" class="transparent-background bg-orange-500 text-white rounded-full px-4 py-2 mt-4">More Details</a></div>
+
 </div>
 </section>
+<section>
 <div>
-  <div class="flex flex-col md:flex-row" style="padding: 1vw 5vw;">
+  <h3 class="text-2xl font-bold text-orange-500 m-8 px-8 text-white">Playback Technology with Ableton Live | New Intake</h3>
+  <div class="flex flex-col md:flex-row" style="padding: 0.1vw 5vw;">
     <!-- First Column -->
     <div class="md:w-1/2 custom-padding px-8 py-6 bg-black">
       <section id="composing">
-        <h3 class="text-2xl font-bold text-orange-500 mb-5 text-white">2024 New Intake</h3>
-        <p class="text-gray-500 pb-6"> Introducing T-LAB Academy's latest music production course | Ableton Live &
-          Playback Technology Learn how to make digital music the right way
+        <p class="text-gray-500 pb-2 text-md"> Introducing T-LAB Academy's latest music production course | Ableton Live &
+          Playback Technology Learn how to make digital music the right way</p>
 
           </br>
-
-          . Ableton Live software simply and clearly
-
-          . Audio Recording Accurately record live sounds of voices and musical instruments
-
-          . Create songs using MIDI and leading Vsti (eg:kontakt).
-
-          . Completing a song using Audio and Midi
-
-          .Improving tone and adjusting modulation using Compressor, EQ, Pitch Correction, Reverb, and Delay effects
-          accurately.
-
-          . Using MIX and MASTER to increase the quality of the song with a good sound combination.
-
-          . Correct handling of playback technology in live performance and basic principles of live looping
-          technology.
-
-          Join us for quality and standard digital music creation.
-
-          Contact – 0776141142 | 0112 814309
-        </p>
-        <div class="flex items-center justify-center p-8">
-          <a href="https://wa.link/8m24ex"
-            class="m-2 inline-block px-8 py-2 font-semibold text-white bg-orange-500 hover:bg-red-700 rounded-full">
-            Call now</a>
+          <ul class="text-sm text-gray-500 list-disc pl-5">
+            <li>Ableton Live software simply and clearly</li>
+            <li>Audio Recording: Accurately record live sounds of voices and musical instruments</li>
+            <li>Create songs using MIDI and leading VSTi (e.g., Kontakt)</li>
+            <li>Completing a song using Audio and MIDI</li>
+            <li>Improving tone and adjusting modulation using Compressor, EQ, Pitch Correction, Reverb, and Delay effects accurately</li>
+            <li>Using MIX and MASTER to increase the quality of the song with a good sound combination</li>
+            <li>Correct handling of playback technology in live performance and basic principles of live looping technology</li>
+        </ul>
+        
+        <p class="text-gray-300 pt-4 text-md">Join us for quality and standard digital music creation.<br> Contact – 0776141142 | 0112 814309</p>
+        <div class="flex items-center bg-zinc-950 rounded-3xl p-3 px-8 space-x-4 my-6 mx-3 w-fit ">
+          <div class="flex flex-col text-gray-200 px-4">
+            <p>0112 814 304</p>
+            <p>077 729 2992</p>
+          </div>
+          <div class="px-4">
+          <a aria-label="Chat on WhatsApp" href="https://wa.me/1XXXXXXXXXX"> <img alt="Chat on WhatsApp" class="h-10 w-10 bg-white rounded-full p-2" src="{% static 'img/whatsapp.png' %}" />
           </a>
+          </div>
 
         </div>
       </section>
@@ -55,27 +51,82 @@
     <!-- Second Column -->
     <div class="md:w-1/2 custom-padding px-8 py-6 flex justify-center">
       <div class="image-container">
-        <img src="{% static 'img/academy post.jpg'%}" alt="Mixing and Mastering Image" class="rounded-lg">
+        <img src="{% static 'img/academy post.jpg'%}"  class="rounded-lg">
       </div>
     </div>
   </div>   
 </div> 
 </section>
 <section style="padding: 1vw 5vw;" class="border-b border-orange-500">
-  <h3 class="text-2xl font-bold text-white mb-5 text-white">Our lectures</h3>
-  <div id="productContainer" class="p-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8" >
+  <h3 class="text-lg px-4 text-white mb-5 text-gray-200 font-semibold">Our lectures</h3>
+  <div  class="px-2 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8" >
     <div class="bg-black p-4 rounded-lg shadow-md mb-4">
-      <img src="{% static 'img/thusith.jpeg' %}" class="w-full h-48 object-contain mb-4" alt="Thusith Niroshana">
-      <h3 class="text-lg text-white font-semibold">Thusith Niroshana</h3>
-      <p class="text-gray-600 pb-2">Founder of T-Lab Studios / Music Producer</p>
+      <img src="{% static 'img/thusith.jpeg' %}" class="w-full h-48 object-contain mb-4 rounded-2xl" alt="Thusith Niroshana">
+      <h3 class="text-md px-4 text-white ">Thusith Niroshana</h3>
+      <p class="text-gray-600 px-4 pb-2 text-sm">Founder of T-Lab Studios / Music Producer</p>
   </div>
   
-  <div class="bg-black p-4 rounded-lg shadow-md mb-4">
-      <img src="{% static 'img/saliya.jpg' %}" class="w-full h-48 object-contain mb-4" alt="Saliya Illangasinghe">
-      <h3 class="text-lg text-white font-semibold">Saliya Illangasinghe</h3>
-      <p class="text-gray-600 pb-2">Guitarist / Composer / Musician at WINGS</p>
+  <div class="bg-black p-4 rounded-lg shadow-md justify-start mb-4">
+      <img src="{% static 'img/saliya.jpg' %}" class="w-full h-48 object-contain mb-4 rounded-3xl" alt="Saliya Illangasinghe">
+      <h3 class="text-md px-4 text-white ">Saliya Illangasinghe</h3>
+      <p class="text-gray-600 px-4 pb-2 text-sm">Guitarist / Composer / Musician at WINGS</p>
   </div>
     </div>
+</section>
+<section>
+  <div>
+    <h3 class="text-2xl font-bold text-orange-500 m-8 px-8 text-white">Music Production with Cubase | New Intake</h3>
+    <div class="flex flex-col md:flex-row" style="padding: 0.1vw 5vw;">
+      <!-- First Column -->
+      <div class="md:w-1/2 custom-padding px-8 py-6 bg-black">
+        <section id="composing">
+          <p class="text-gray-500 pb-2 text-md"> Introducing T-LAB Academy's latest music production course | Ableton Live &
+            Playback Technology Learn how to make digital music the right way</p>
+  
+            </br>
+            <ul class="text-sm text-gray-500 list-disc pl-5">
+              <li>Ableton Live software simply and clearly</li>
+              <li>Audio Recording: Accurately record live sounds of voices and musical instruments</li>
+              <li>Create songs using MIDI and leading VSTi (e.g., Kontakt)</li>
+              <li>Completing a song using Audio and MIDI</li>
+              <li>Improving tone and adjusting modulation using Compressor, EQ, Pitch Correction, Reverb, and Delay effects accurately</li>
+              <li>Using MIX and MASTER to increase the quality of the song with a good sound combination</li>
+              <li>Correct handling of playback technology in live performance and basic principles of live looping technology</li>
+          </ul>
+          
+          <p class="text-gray-300 pt-4 text-md">Join us for quality and standard digital music creation.<br> Contact – 0776141142 | 0112 814309</p>
+          <div class="flex items-center bg-zinc-950 rounded-3xl p-3 px-8 space-x-4 my-6 mx-3 w-fit ">
+            <div class="flex flex-col text-gray-200 px-4">
+              <p>0112 814 304</p>
+              <p>077 729 2992</p>
+            </div>
+            <div class="px-4">
+            <a aria-label="Chat on WhatsApp" href="https://wa.me/1XXXXXXXXXX"> <img alt="Chat on WhatsApp" class="h-10 w-10 bg-white rounded-full p-2" src="{% static 'img/whatsapp.png' %}" />
+            </a>
+            </div>
+  
+          </div>
+        </section>
+      </div>
+  
+      <!-- Second Column -->
+      <div class="md:w-1/2 custom-padding px-8 py-6 flex justify-center">
+        <div class="image-container">
+          <img src="{% static 'img/course 2.jpeg'%}"  class="rounded-lg">
+        </div>
+      </div>
+    </div>   
+  </div> 
+  </section>
+  <section style="padding: 1vw 5vw;" class="border-b border-orange-500">
+    <h3 class="text-lg px-4 text-white mb-5 text-gray-200 font-semibold">Our lectures</h3>
+    <div  class="px-2 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8" >
+      <div class="bg-black p-4 rounded-lg shadow-md mb-4">
+        <img src="{% static 'img/thusith.jpeg' %}" class="w-full h-48 object-contain mb-4 rounded-2xl" alt="Thusith Niroshana">
+        <h3 class="text-md px-4 text-white ">Thusith Niroshana</h3>
+        <p class="text-gray-600 px-4 pb-2 text-sm">Founder of T-Lab Studios / Music Producer</p>
+    </div>
+      </div>
   </section>
 
 
