--- a/home/templates/contact.html
+++ b/home/templates/contact.html
@@ -5,8 +5,8 @@
   <div class="container mx-auto">
     <div class="text-center">
       <div class="animated-text">
-        <h2 class="text-5xl font-bold mb-4">Contact Us</h2>
-        <p class="text-md px-6 text-gray-500">Reach out to us anytime, and our friendly team will be delighted to assist
+        <h2 class="text-5xl font-bold mb-8">Contact Us</h2>
+        <p class="text-md px-6 text-gray-400">Reach out to us anytime, and our friendly team will be delighted to assist
           you. Whether it's about our products, services, or just a friendly hello, we're all ears. Get in touch
           through the provided form, email, or phone number, and let's start a conversation</p>
       </div>
@@ -31,24 +31,32 @@
         </div>
         <div class="animated-text">
           <div class="p-8 bg-black bg-opacity-80 rounded-lg shadow-lg">
-            <p class="text-white">Want more details? Get in touch on WhatsApp for a quick call to discuss all your
+            <h3 class="text-2xl font-bold mb-4">Call Us</h3>
+            <p class="text-gray-400 text-sm">Want more details? Get in touch on WhatsApp for a quick call to discuss all your
               queries!</p>
-            <div class="flex items-center justify-center p-8">
-              <a href="https://wa.link/3spd48"
-                class="m-2 inline-block px-8 py-2 font-semibold text-white bg-orange-500 hover:bg-orange-600 rounded-full">
-                <i class="fas fa-phone"></i>
+            <div class="flex items-center bg-zinc-950 rounded-3xl p-3 px-8 space-x-4 my-6 mx-3 w-fit ">
+              <div class="flex flex-col text-gray-200 px-4">
+                <p>0112 814 304</p>
+                <p>077 729 2992</p>
+              </div>
+              <div class="px-4">
+              <a aria-label="Chat on WhatsApp" href="https://wa.me/1XXXXXXXXXX"> <img alt="Chat on WhatsApp" class="h-10 w-10 bg-white rounded-full p-2" src="{% static 'img/whatsapp.png' %}" />
               </a>
+              </div>
 
             </div>
+            <div>
+              <h3 class="text-2xl font-bold mb-4">Location</h3>
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.1562960142223!2d79.89069607499609!3d6.871868393126834!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae25a43c5a10e47%3A0x6e6530b3880b05b8!2sT-LAB%20Studios%20(Pvt)%20Ltd!5e0!3m2!1sen!2slk!4v1692542727433!5m2!1sen!2slk"
               width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-            <p class="m-2">30 Old Kesbewa Rd
+            <p class="m-2 text-gray-400 text-sm" >30 Old Kesbewa Rd
               <br>Nugegoda 10250
               <br>Sri Lanka
             </p>
+            </div>
           </div>
         </div>
       </div>
