--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -28,97 +28,7 @@
       </div>
     </div>
   </section>
-  <section>
-    <div class="text-white p-10 section border-t border-orange-500 bbox" style="background-color: black">
-      <div class="animated-text">
-        <h3 class="text-5xl font-bold mb-5 text-center">Who we are</h3>
-        <p class="text-gray-500 text-m text-left sm:px-10">
-          T-lab studios is a leading production company specializing in #Trusted HQ audio recording #Music composing #Video
-          production & Graphic Designing services since 2017 </p>
-      </div>
-    </div>
-    <!-- <div class="flex flex-wrap justify-center">
-
-      <div class="w-64 h-45 m-4 p-8 bg-black rounded-lg shadow-md text-center fade-in bbox " data-aos="fade-up">
-        <h1 class="text-4xl font-bold mb-4 num text-orange-500" data-value="4">00</h1>
-        <p class="text-md text-white">Awards</p>
-      </div>
-
-      <div class="w-64 h-45 m-4 p-8 bg-black rounded-lg shadow-md text-center fade-in bbox" data-aos="fade-up"
-        data-aos-delay="100">
-        <h1 class="text-4xl font-bold mb-4 num text-orange-500" data-value="100">000</h1>
-        <p class="text-md text-white">Songs</p>
-      </div>
-
-      <div class="w-64 h-45 m-4 p-8 bg-black rounded-lg shadow-md text-center fade-in bbox" data-aos="fade-up"
-        data-aos-delay="200">
-        <h1 class="text-4xl font-bold mb-4 num text-orange-500" data-value="100">000</h1>
-        <p class="text-md text-white">Commercials</p>
-      </div>
-
-      <div class="w-64 h-45 m-4 p-8 bg-black rounded-lg shadow-md text-center fade-in bbox" data-aos="fade-up"
-        data-aos-delay="300">
-        <h1 class="text-4xl font-bold mb-4 num text-orange-500" data-value="17">0</h1>
-        <p class="text-md text-white">Years.</p>
-      </div>
-
-
-    </div> -->
-    <div class="flex justify-center">
-      <div class="items-center p-5" style="width: 90vw;">
-        <img src="{% static 'img/collage.webp' %}" alt="Description of your image" class="w-full" />
-      </div>
-    </div>
-    
-    
-  </section>
-
-  <section class="p-10 section border-t border-orange-500">
-    <h2 class="text-5xl font-bold  text-white text-center">Services</h2>
-    <div class=" flex justify-center ">
-      <p class="text-gray-500 text-m text-center p-8">
-        We offer a variety of services in video and audio production. Explore our expertise to bring your creative
-        vision to life with professional quality.
-      </p>
-
-    </div>
-    <div class=" flex justify-center ">
-      <div class="cards" style="margin-left: 5vw; margin-right: 5vw; margin-bottom: 40px; margin-top: 40px;">
-
-        <div class="card red border border-orange-500">
-          <p class="text-2xl p-4">Trusted audio recording Services </p>
-          <i class="fas fa-microphone custom-large-icon"></i>
-          <p class="text-gray-500">T-lab production house is the proud home to 2 state-of–the-art sound recording
-            studios which are managed by professional team of sound engineers and composers.</p>
-          <a href="{% url 'ourservices'%}" class="mt-6 inline-block px-8 py-2 font-semibold text-orange-500">Learn More</a>
-        </div>
-        <div class="card red border border-orange-500">
-          <p class="text-2xl p-4">Music Composing | Mix & Mastering Services</p>
-          <i class="fas fa-headphones custom-large-icon"></i>
-          <p class="text-gray-500">T-lab offers a wide range of services for music composing and sound designing for
-            solo artists as well as groups. </p>
-          <a href="{% url 'ourservices'%}" class="mt-6 inline-block px-8 py-2 font-semibold text-orange-500 ">Learn More</a>
-        </div>
-        <div class="card red border border-orange-500">
-          <p class="text-2xl p-4">Video production </p>
-          <i class="fas fa-video custom-large-icon"></i>
-          <p class="text-gray-500">T-lab production house not only offers a variety of services for audio productions
-            but, we also offer a variety of services for video productions.</p>
-          <a href="{% url 'ourservices'%}" class="mt-6 inline-block px-8 py-2 font-semibold text-orange-500 ">Learn More</a>
-        </div>
-        <div class="card red border border-orange-500">
-          <p class="text-2xl p-4"> Graphic Designing services</p>
-          <i class="fas fa-video custom-large-icon"></i>
-          <p class="text-gray-500">T-Lab is your go-to for exceptional graphic design services that will make your product shine. Our team of skilled graphic designers specializes in creating eye-catching designs that will set your product apart from the competition.</p>
-          <a href="{% url 'ourservices'%}" class="mt-6 inline-block px-8 py-2 font-semibold text-orange-500 ">Learn More</a>
-        </div>
-      </div>
-    </div>
-
-    </div>
-
-  </section>
-  <section id="contact-us" class="content-section py-10 section border-t border-orange-500">
+  <section class="content-section py-10 section border-t border-orange-500">
     <div class="animated-text">
       <h2 class="text-5xl font-bold text-white text-center">Latest Updates</h2>
     </div>
@@ -173,6 +83,96 @@
       </div>
     </div>
   </section>
+  <section class="p-10 section border-t border-orange-500">
+    <h2 class="text-5xl font-bold  text-white text-center">Services</h2>
+    <div class=" flex justify-center ">
+      <p class="text-gray-500 text-m text-center p-8">
+        We offer a variety of services in video and audio production. Explore our expertise to bring your creative
+        vision to life with professional quality.
+      </p>
+
+    </div>
+    <div class=" flex justify-center ">
+      <div class="cards" style="margin-left: 5vw; margin-right: 5vw; margin-bottom: 40px; margin-top: 40px;">
+
+        <div class="card red border border-orange-500">
+          <p class="text-2xl p-4">Trusted audio recording Services </p>
+          <i class="fas fa-microphone custom-large-icon"></i>
+          <p class="text-gray-500">T-lab production house is the proud home to 2 state-of–the-art sound recording
+            studios which are managed by professional team of sound engineers and composers.</p>
+          <a href="{% url 'ourservices'%}" class="mt-6 inline-block px-8 py-2 font-semibold text-orange-500">Learn More</a>
+        </div>
+        <div class="card red border border-orange-500">
+          <p class="text-2xl p-4">Music Composing | Mix & Mastering Services</p>
+          <i class="fas fa-headphones custom-large-icon"></i>
+          <p class="text-gray-500">T-lab offers a wide range of services for music composing and sound designing for
+            solo artists as well as groups. </p>
+          <a href="{% url 'ourservices'%}" class="mt-6 inline-block px-8 py-2 font-semibold text-orange-500 ">Learn More</a>
+        </div>
+        <div class="card red border border-orange-500">
+          <p class="text-2xl p-4">Video production </p>
+          <i class="fas fa-video custom-large-icon"></i>
+          <p class="text-gray-500">T-lab production house not only offers a variety of services for audio productions
+            but, we also offer a variety of services for video productions.</p>
+          <a href="{% url 'ourservices'%}" class="mt-6 inline-block px-8 py-2 font-semibold text-orange-500 ">Learn More</a>
+        </div>
+        <div class="card red border border-orange-500">
+          <p class="text-2xl p-4"> Graphic Designing services</p>
+          <i class="fas fa-video custom-large-icon"></i>
+          <p class="text-gray-500">T-Lab is your go-to for exceptional graphic design services that will make your product shine. Our team of skilled graphic designers specializes in creating eye-catching designs that will set your product apart from the competition.</p>
+          <a href="{% url 'ourservices'%}" class="mt-6 inline-block px-8 py-2 font-semibold text-orange-500 ">Learn More</a>
+        </div>
+      </div>
+    </div>
+
+    </div>
+
+  </section>
+  <section>
+    <div class="text-white p-10 section border-t border-orange-500 bbox" style="background-color: black">
+      <div class="animated-text">
+        <h3 class="text-5xl font-bold mb-5 text-center">Who we are</h3>
+        <p class="text-gray-500 text-m text-left sm:px-10">
+          T-lab studios is a leading production company specializing in #Trusted HQ audio recording #Music composing #Video
+          production & Graphic Designing services since 2017 </p>
+      </div>
+    </div>
+    <!-- <div class="flex flex-wrap justify-center">
+
+      <div class="w-64 h-45 m-4 p-8 bg-black rounded-lg shadow-md text-center fade-in bbox " data-aos="fade-up">
+        <h1 class="text-4xl font-bold mb-4 num text-orange-500" data-value="4">00</h1>
+        <p class="text-md text-white">Awards</p>
+      </div>
+
+      <div class="w-64 h-45 m-4 p-8 bg-black rounded-lg shadow-md text-center fade-in bbox" data-aos="fade-up"
+        data-aos-delay="100">
+        <h1 class="text-4xl font-bold mb-4 num text-orange-500" data-value="100">000</h1>
+        <p class="text-md text-white">Songs</p>
+      </div>
+
+      <div class="w-64 h-45 m-4 p-8 bg-black rounded-lg shadow-md text-center fade-in bbox" data-aos="fade-up"
+        data-aos-delay="200">
+        <h1 class="text-4xl font-bold mb-4 num text-orange-500" data-value="100">000</h1>
+        <p class="text-md text-white">Commercials</p>
+      </div>
+
+      <div class="w-64 h-45 m-4 p-8 bg-black rounded-lg shadow-md text-center fade-in bbox" data-aos="fade-up"
+        data-aos-delay="300">
+        <h1 class="text-4xl font-bold mb-4 num text-orange-500" data-value="17">0</h1>
+        <p class="text-md text-white">Years.</p>
+      </div>
+
+
+    </div> -->
+    <div class="flex justify-center">
+      <div class="items-center p-5" style="width: 90vw;">
+        <img src="{% static 'img/collage.webp' %}" alt="Description of your image" class="w-full" />
+      </div>
+    </div>
+    
+    
+  </section>
+  
   <script>
     function startCountUpAnimation() {
       let valueDisplays = document.querySelectorAll(".num");
